Update mtmh benchmarks

--- a/benchmarks/mtmh/real1_Abalone.ipynb
+++ b/benchmarks/mtmh/real1_Abalone.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
     "\n",
     "df = multi_tries_performance(\n",
     "    X, y,\n",
-    "    multi_tries_list=[1, 5, 10, 50],\n",
+    "    multi_tries_list=[1, 5, 10, 50, 100],\n",
     "    n_runs=5, n_chains=4,\n",
     "    ndpost=1000, nskip=1000, n_trees=100, n_jobs=5\n",
     ")\n",
@@ -463,22 +463,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   multi_tries  Rhat_Sigma2  Rhat_RMSE  Test_MSE  Coverage  Train_Time\n",
-      "0            1     1.054701   1.327634  4.814374  0.933971   36.856459\n",
-      "1            5     1.059678   1.200426  4.791194  0.934737   83.957021\n",
-      "2           10     1.091023   1.118473  4.794713  0.933589  137.174760\n",
-      "3           50     1.074219   1.108321  4.819560  0.931483  558.533021\n"
+      "   multi_tries  Rhat_Sigma2  Rhat_RMSE  Test_MSE  Coverage   Train_Time\n",
+      "0            1     1.054701   1.327634  4.814374  0.933971    36.856459\n",
+      "1            5     1.059678   1.200426  4.791194  0.934737    83.957021\n",
+      "2           10     1.091023   1.118473  4.794713  0.933589   137.174760\n",
+      "3           50     1.074219   1.108321  4.819560  0.931483   558.533021\n",
+      "4          100     1.106350   1.081486  4.881028  0.931100  1062.214509\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"results/real1_Abalone_tries.csv\")\n",
     "print(df)"
    ]
   }
