--- a/benchmarks/mtmh/real3_CalHousing.ipynb
+++ b/benchmarks/mtmh/real3_CalHousing.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
     "\n",
     "df = multi_tries_performance(\n",
     "    X, y,\n",
-    "    multi_tries_list=[1, 5, 10, 50],\n",
+    "    multi_tries_list=[1, 5, 10, 50, 100],\n",
     "    n_runs=5, n_chains=4,\n",
     "    ndpost=1000, nskip=1000, n_trees=100, n_jobs=5\n",
     ")\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -469,11 +469,13 @@
       "0            1     1.602325   1.960823  0.223089  0.934109   125.266718\n",
       "1            5     1.595627   1.609658  0.218184  0.929535   287.391389\n",
       "2           10     1.531820   1.711494  0.213891  0.926667   467.641404\n",
-      "3           50     1.616604   1.690688  0.214135  0.922791  1739.155676\n"
+      "3           50     1.616604   1.690688  0.214135  0.922791  1739.155676\n",
+      "4          100     1.597469   1.537986  0.215576  0.918760  3138.195678\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "df = pd.read_csv(\"results/real3_CalHousing_tries.csv\")\n",
     "print(df)"
    ]
