--- a/benchmarks/mtmh/real4_Concrete.ipynb
+++ b/benchmarks/mtmh/real4_Concrete.ipynb
@@ -433,7 +433,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:arviz.preview:arviz_base not installed\n",
+      "INFO:arviz.preview:arviz_stats not installed\n",
+      "INFO:arviz.preview:arviz_plots not installed\n"
+     ]
+    }
+   ],
    "source": [
     "from multi_tries import multi_tries_performance\n",
     "import pandas as pd\n",
@@ -460,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -468,11 +478,11 @@
      "output_type": "stream",
      "text": [
       "   multi_tries  Rhat_Sigma2  Rhat_RMSE   Test_MSE  Coverage  Train_Time\n",
-      "0            1     1.363120   1.562512  19.965246  0.920155   19.653600\n",
-      "1            5     1.203781   1.278029  18.594666  0.912403   47.135347\n",
-      "2           10     1.089787   1.219021  17.348515  0.931783   78.780124\n",
-      "3           50     1.045073   1.091081  16.395590  0.948837  444.057109\n",
-      "4          100     1.077150   1.119993  16.182564  0.950388  953.258171\n"
+      "0            1     1.252344   1.381287  20.003305  0.910078   26.971360\n",
+      "1            5     1.197970   1.339547  19.612620  0.919380   57.556647\n",
+      "2           10     1.180081   1.288728  19.366922  0.916279   94.101910\n",
+      "3           50     1.078785   1.124731  16.040148  0.937984  383.216408\n",
+      "4          100     1.075322   1.120945  17.748036  0.942636  655.096327\n"
      ]
     }
    ],
