--- a/tests/01_debug.ipynb
+++ b/tests/01_debug.ipynb
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:05<00:00, 56.31it/s] \n"
+      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.32it/s]\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:07<00:00, 65.40it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:10<00:00, 47.06it/s]\n"
      ]
     },
     {
@@ -136,7 +136,7 @@
     "bart2 = DefaultBART(ndpost=400, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "%prun -s cumtime -D profile_bart.prof -q bart2.fit(X_train, y_train)\n",
     "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
-    "!dot -Tpng profile_bart.dot -o profile_bart.png"
+    "!dot -Tpng profile_bart.dot -o output/profile_bart.png"
    ]
   },
   {
@@ -240,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-11 16:18:01,300:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-11-07 15:46:44,079:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
