--- a/tests/01_debug.ipynb
+++ b/tests/01_debug.ipynb
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[63.69758676 65.48891713 70.34915697 54.40002918 59.24234782 64.16862716\n",
-      " 69.78577881 68.85612404 53.55980009 60.15631858 61.31876181 66.06233364]\n"
+      "[47.77161298 52.6198333  64.61658169 53.45362304 59.58934438 59.78809596\n",
+      " 54.26683888 62.27312519 59.07143414 46.83945454 58.58820983 66.35490222]\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 29.32it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:12<00:00, 24.02it/s]\n"
      ]
     }
    ],
@@ -81,10 +81,10 @@
      "output_type": "stream",
      "text": [
       "        selected  success  accepted  success_rate  accept_rate  change_rate\n",
-      "grow       11825    11825      3621      1.000000     0.306216     0.306216\n",
-      "prune      12191    11493      3471      0.942745     0.302010     0.284718\n",
-      "change      3014     2839      1019      0.941938     0.358929     0.338089\n",
-      "swap        2970     1012       377      0.340741     0.372530     0.126936\n"
+      "grow       11957    11957      1931      1.000000     0.161495     0.161495\n",
+      "prune      12104    11969      1628      0.988847     0.136018     0.134501\n",
+      "change      2905     2874       114      0.989329     0.039666     0.039243\n",
+      "swap        3034     2522       283      0.831246     0.112213     0.093276\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:10<00:00, 47.06it/s]\n"
+      "Iterations: 100%|██████████| 1100/1100 [00:12<00:00, 88.56it/s] \n"
      ]
     },
     {
@@ -148,12 +148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 4 2 2 3 3 3 3 2 4 3 4 3 3 4 1 1 2 2 1 4 2 2 2 2 5 3 2 4 2 2 2 3 5 3 1 4\n",
-      " 2 2 3 2 1 2 1 2 4 3 2 2 1 5 4 2 2 1 3 3 2 1 4 2 1 2 2 2 3 2 4 3 1 2 2 3 1\n",
-      " 1 1 2 2 1 2 2 2 2 3 2 2 2 1 2 2 2 2 3 2 2 3 2 1 4 2]\n",
-      "(array([ 1,  4,  5,  6,  7,  9, 10, 11, 12, 13, 14, 20, 25, 26, 28, 32, 33,\n",
-      "       34, 36, 39, 45, 46, 50, 51, 55, 56, 59, 65, 67, 68, 72, 83, 92, 95,\n",
-      "       98]),)\n"
+      "[3 2 3 3 3 4 2 2 4 3 3 4 2 2 3 2 3 5 4 1 3 3 3 2 2 3 2 1 5 3 4 6 3 2 1 5 2\n",
+      " 1 3 3 4 5 3 3 2 2 4 5 3 5 3 2 3 5 2 6 3 3 3 4 3 3 1 2 3 2 4 3 2 2 3 3 4 6\n",
+      " 3 2 2 3 3 5 2 4 3 3 2 3 2 1 3 2 4 4 2 5 1 4 4 3 4 3]\n",
+      "(array([ 0,  2,  3,  4,  5,  8,  9, 10, 11, 14, 16, 17, 18, 20, 21, 22, 25,\n",
+      "       28, 29, 30, 31, 32, 35, 38, 39, 40, 41, 42, 43, 46, 47, 48, 49, 50,\n",
+      "       52, 53, 55, 56, 57, 58, 59, 60, 61, 64, 66, 67, 70, 71, 72, 73, 74,\n",
+      "       77, 78, 79, 81, 82, 83, 85, 88, 90, 91, 93, 95, 96, 97, 98, 99]),)\n"
      ]
     }
    ],
@@ -173,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(8.8)"
+       "np.float64(14.72)"
       ]
      },
      "execution_count": 8,
@@ -194,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00081172])}\n"
+      "{'eps_sigma2': array([0.00082771])}\n"
      ]
     }
    ],
@@ -211,14 +212,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_19 <= 0.842776597 (split, n = 2250)\n",
-      "\tX_25 <= 0.639114857 (split, n = 1912)\n",
-      "\t\tVal: -0.012581126 (leaf, n = 1239)\n",
-      "\t\tVal: -0.000585763 (leaf, n = 673)\n",
-      "\tVal: 0.007525850 (leaf, n = 338)\n",
-      "[19 25 -1 -1 -1 -2 -2 -2]\n",
-      "[        nan         nan  0.00752585 -0.01258113 -0.00058576         nan\n",
-      "         nan         nan]\n"
+      "X_18 <= 0.551478803 (split, n = 3750)\n",
+      "\tX_37 <= 0.687696576 (split, n = 2062)\n",
+      "\t\tVal: -0.008518734 (leaf, n = 1450)\n",
+      "\t\tVal: -0.003518621 (leaf, n = 612)\n",
+      "\tX_3 <= 0.931643546 (split, n = 1688)\n",
+      "\t\tVal: 0.000340087 (leaf, n = 1559)\n",
+      "\t\tVal: 0.011936542 (leaf, n = 129)\n",
+      "[18 37  3 -1 -1 -1 -1 -2]\n",
+      "[        nan         nan         nan -0.00851873 -0.00351862  0.00034009\n",
+      "  0.01193654         nan]\n"
      ]
     }
    ],
@@ -240,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-11-07 15:46:44,079:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-11-10 03:41:08,930:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -248,9 +251,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.13 A_prune=0.15 (burnin)\n",
-      "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.06\n",
-      "Iteration 300/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.12\n"
+      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.11 A_prune=0.13 (burnin)\n",
+      "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.08\n",
+      "Iteration 300/300 P_grow=0.50 P_prune=0.50 A_grow=0.06 A_prune=0.08\n"
      ]
     }
    ],
@@ -273,10 +276,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.016913205213783065,\n",
-       " 'rf': 0.01570244066836391,\n",
-       " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.01451765109911874}"
+       "{'bart': 1.9039084165786992,\n",
+       " 'rf': 15.553392321882356,\n",
+       " 'lr': 0.010585269816872593,\n",
+       " 'btz': 1.7780111190121484}"
       ]
      },
      "execution_count": 12,
@@ -307,10 +310,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.31316486  0.28736398  0.31458274  0.30757785 -0.39123347  0.07929082\n",
-      " -0.02212593  0.07817362  0.2402342   0.34557924 -0.09955953  0.03123178]\n",
-      "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
-      " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
+      "[-0.2819172  -0.17924233  0.1719373  -0.15850334  0.0223403  -0.04055745\n",
+      " -0.17597386  0.06062453 -0.04503344 -0.29411054 -0.00813914  0.23933122]\n",
+      "[-0.29961255 -0.17263682  0.14156011 -0.15079972  0.00989589  0.01510122\n",
+      " -0.12950146  0.08018457 -0.00366827 -0.32402596 -0.016324    0.18708703]\n"
      ]
     }
    ],
@@ -327,7 +330,7 @@
     {
      "data": {
       "text/plain": [
-       "36.67989681136702"
+       "32.83170985183459"
       ]
      },
      "execution_count": 14,
@@ -348,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -369,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
