--- a/diagnosis/real1_Abalone_debug2.ipynb
+++ b/diagnosis/real1_Abalone_debug2.ipynb
@@ -52,10 +52,30 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([0.63 , 0.465, 0.15 , 1.027, 0.537, 0.188, 0.176])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:12<00:00, 24.41it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:16<00:00, 18.33it/s]\n"
      ]
     }
    ],
@@ -70,23 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             selected  success  accepted  success_rate  accept_rate  \\\n",
-      "multi_grow      14843    14843      4275       1.00000     0.288015   \n",
-      "multi_prune     15157    14245      4109       0.93983     0.288452   \n",
-      "\n",
-      "             change_rate  \n",
-      "multi_grow      0.288015  \n",
-      "multi_prune     0.271096  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -112,17 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 47.19it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "proposal_probs = {\"grow\" : 0.5,\n",
     "                  \"prune\" : 0.5}\n",
@@ -133,19 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       selected  success  accepted  success_rate  accept_rate  change_rate\n",
-      "grow      15010    15010      4242      1.000000     0.282612     0.282612\n",
-      "prune     14990    14192      4061      0.946765     0.286147     0.270914\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -172,7 +160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
