--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,23 +22,21 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from bart_playground.DataGenerator import DataGenerator\n",
-    "from bart_playground.params import Tree\n",
-    "from bart_playground.bart import DefaultBART\n",
+    "from bart_playground import DefaultBART, Tree, DataGenerator\n",
     "import bartz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.59965549  0.66000473  0.60195109  0.59759841 -0.48024437 -0.05465378\n",
-      " -0.09076175 -0.06775115  0.44628062  0.51643207 -0.17564767 -0.18611937]\n"
+      "[47.77161298 52.6198333  64.61658169 53.45362304 59.58934438 59.78809596\n",
+      " 54.26683888 62.27312519 59.07143414 46.83945454 58.58820983 66.35490222]\n"
      ]
     }
    ],
@@ -47,8 +45,8 @@
     "                  \"prune\" : 0.4,\n",
     "                  \"change\" : 0.1,\n",
     "                  \"swap\" : 0.1}\n",
-    "generator = DataGenerator(n_samples=1000, n_features=2, noise=0.1, random_seed=42)\n",
-    "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
+    "generator = DataGenerator(n_samples=5000, n_features=40, noise=0.1, random_seed=42)\n",
+    "X, y = generator.generate(scenario=\"linear\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
     "print(y_train[:12])"
@@ -56,21 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/300 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 300/300 [00:05<00:00, 50.68it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:12<00:00, 24.02it/s]\n"
      ]
     }
    ],
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +81,10 @@
      "output_type": "stream",
      "text": [
       "        selected  success  accepted  success_rate  accept_rate  change_rate\n",
-      "grow       11825    11825      3621      1.000000     0.306216     0.306216\n",
-      "prune      12191    11493      3471      0.942745     0.302010     0.284718\n",
-      "change      3014     2839      1019      0.941938     0.358929     0.338089\n",
-      "swap        2970     1012       377      0.340741     0.372530     0.126936\n"
+      "grow       11957    11957      1931      1.000000     0.161495     0.161495\n",
+      "prune      12104    11969      1628      0.988847     0.136018     0.134501\n",
+      "change      2905     2874       114      0.989329     0.039666     0.039243\n",
+      "swap        3034     2522       283      0.831246     0.112213     0.093276\n"
      ]
     }
    ],
@@ -122,21 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/500 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 500/500 [00:10<00:00, 45.77it/s]\n"
+      "Iterations: 100%|██████████| 1100/1100 [00:12<00:00, 88.56it/s] \n"
      ]
     },
     {
@@ -149,25 +133,28 @@
     }
    ],
    "source": [
-    "bart2 = DefaultBART(ndpost=400, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart2 = DefaultBART(ndpost=1000, nskip=100, n_trees=50, proposal_probs=proposal_probs)\n",
     "%prun -s cumtime -D profile_bart.prof -q bart2.fit(X_train, y_train)\n",
     "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
-    "!dot -Tpng profile_bart.dot -o profile_bart.png"
+    "!dot -Tpng profile_bart.dot -o output/profile_bart.png"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 3 1 3 2 2 3 1 1 2 0 1 2 2 3 2 1 1 2 2 0 3 4 2 2 2 1 1 1 2 2 1 1 0 1 1 1\n",
-      " 2 0 1 1 3 1 2 1 2 1 2 3 5 3 1 1 1 1 1 2 1 2 1 3 1 2 1 0 1 2 1 1 0 0 1 2 2\n",
-      " 1 0 2 2 1 1 1 1 2 1 1 1 5 1 2 1 0 1 0 1 1 2 2 2 2 1]\n",
-      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86]),)\n"
+      "[3 2 3 3 3 4 2 2 4 3 3 4 2 2 3 2 3 5 4 1 3 3 3 2 2 3 2 1 5 3 4 6 3 2 1 5 2\n",
+      " 1 3 3 4 5 3 3 2 2 4 5 3 5 3 2 3 5 2 6 3 3 3 4 3 3 1 2 3 2 4 3 2 2 3 3 4 6\n",
+      " 3 2 2 3 3 5 2 4 3 3 2 3 2 1 3 2 4 4 2 5 1 4 4 3 4 3]\n",
+      "(array([ 0,  2,  3,  4,  5,  8,  9, 10, 11, 14, 16, 17, 18, 20, 21, 22, 25,\n",
+      "       28, 29, 30, 31, 32, 35, 38, 39, 40, 41, 42, 43, 46, 47, 48, 49, 50,\n",
+      "       52, 53, 55, 56, 57, 58, 59, 60, 61, 64, 66, 67, 70, 71, 72, 73, 74,\n",
+      "       77, 78, 79, 81, 82, 83, 85, 88, 90, 91, 93, 95, 96, 97, 98, 99]),)\n"
      ]
     }
    ],
@@ -181,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(8.8)"
+       "np.float64(14.72)"
       ]
      },
      "execution_count": 8,
@@ -201,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00642036])}\n"
+      "{'eps_sigma2': array([0.00082771])}\n"
      ]
     }
    ],
@@ -218,23 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.763697386 (split, n = 750)\n",
-      "\tX_1 <= 0.514178932 (split, n = 562)\n",
-      "\t\tVal: -0.000567809 (leaf, n = 294)\n",
-      "\t\tVal: 0.024965059 (leaf, n = 268)\n",
-      "\tX_1 <= 0.092173070 (split, n = 188)\n",
-      "\t\tVal: 0.014175317 (leaf, n = 8)\n",
-      "\t\tVal: -0.013555662 (leaf, n = 180)\n",
-      "[ 0  1  1 -1 -1 -1 -1 -2]\n",
-      "[        nan         nan         nan -0.00056781  0.02496506  0.01417532\n",
-      " -0.01355566         nan]\n"
+      "X_18 <= 0.551478803 (split, n = 3750)\n",
+      "\tX_37 <= 0.687696576 (split, n = 2062)\n",
+      "\t\tVal: -0.008518734 (leaf, n = 1450)\n",
+      "\t\tVal: -0.003518621 (leaf, n = 612)\n",
+      "\tX_3 <= 0.931643546 (split, n = 1688)\n",
+      "\t\tVal: 0.000340087 (leaf, n = 1559)\n",
+      "\t\tVal: 0.011936542 (leaf, n = 129)\n",
+      "[18 37  3 -1 -1 -1 -1 -2]\n",
+      "[        nan         nan         nan -0.00851873 -0.00351862  0.00034009\n",
+      "  0.01193654         nan]\n"
      ]
     }
    ],
@@ -249,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-09 20:41:24,802:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-11-10 03:41:08,930:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -264,9 +251,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
-      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
-      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
+      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.11 A_prune=0.13 (burnin)\n",
+      "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.08\n",
+      "Iteration 300/300 P_grow=0.50 P_prune=0.50 A_grow=0.06 A_prune=0.08\n"
      ]
     }
    ],
@@ -283,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.016913205213783065,\n",
-       " 'rf': 0.01570244066836391,\n",
-       " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.01451765109911874}"
+       "{'bart': 1.9039084165786992,\n",
+       " 'rf': 15.553392321882356,\n",
+       " 'lr': 0.010585269816872593,\n",
+       " 'btz': 1.7780111190121484}"
       ]
      },
      "execution_count": 12,
@@ -316,17 +303,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.31316486  0.28736398  0.31458274  0.30757785 -0.39123347  0.07929082\n",
-      " -0.02212593  0.07817362  0.2402342   0.34557924 -0.09955953  0.03123178]\n",
-      "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
-      " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
+      "[-0.2819172  -0.17924233  0.1719373  -0.15850334  0.0223403  -0.04055745\n",
+      " -0.17597386  0.06062453 -0.04503344 -0.29411054 -0.00813914  0.23933122]\n",
+      "[-0.29961255 -0.17263682  0.14156011 -0.15079972  0.00989589  0.01510122\n",
+      " -0.12950146  0.08018457 -0.00366827 -0.32402596 -0.016324    0.18708703]\n"
      ]
     }
    ],
@@ -337,13 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08625514042334204"
+       "32.83170985183459"
       ]
      },
      "execution_count": 14,
@@ -357,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -378,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -399,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "bartts",
    "language": "python",
    "name": "python3"
   },
@@ -413,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
